--- a/resultados-dq.html
+++ b/resultados-dq.html
@@ -515,7 +515,7 @@
             }
             
             noVotes.style.display = 'none';
-            totalVotosEl.textContent = `Total de encuestas completadas: ${encuestas.length}`;
+            totalVotosEl.textContent = `Total de encuestas completadas: ${totalEncuestas}`;
             container.innerHTML = '';
             
             // Iterar sobre cada pregunta
